Fix logo spacing in layout v2

--- a/app/assets/stylesheets/layout/common/_header_v2.scss
+++ b/app/assets/stylesheets/layout/common/_header_v2.scss
@@ -11,6 +11,7 @@
     @include respond-to($mq-m) {
       float: left;
       margin-top: $baseline-unit;
+      margin-bottom: $baseline-unit;
     }
   }
 
